--- a/p2p_app/rebar.config
+++ b/p2p_app/rebar.config
@@ -8,3 +8,4 @@
 {escript_emu_args, "%%! +sbtu +A1\n"}.
 %% Profiles
 {profiles, [{test, [{erl_opts, [debug_info]}]}]}.
+{eunit_tests, [{application, p2p}]}.
